# Autonomous-Self-Organizing-AGI

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  UPGRADE_PLAN.md  UPGRADE_REPORT.md  pyproject.toml  requirements.txt  setup.py
asagi/: __init__.py
asagi/core/: __config_patch_causal__.py  __integration_patch_causal__.py  __patch_notes__.py  _experimental_builders.py  autonomous_system.py  causal_reasoning.py  meta_cognition.py
asagi/intrinsic/: signal_synthesizer.py
asagi/meta_learning/: pareto_navigator.py
asagi/operational/: consistency_learner.py  world_model.py
asagi/utils/: __init__.py  checkpoint.py  logging.py  metrics.py  validation.py  visualization.py
examples/: basic_autonomous_operation.py  causal_discovery_demo.py  enhanced_demo.py
tests/: test_system.py
