[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asagi"
version = "0.0.1"
description = "Autonomous Self-Organizing AGI: reward-free, self-goal-setting architecture with high-order meta-cognition"
authors = [{name = "ASAGI Dev", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "numpy>=1.21.0",
  "scipy>=1.9.0",
  "einops>=0.6.0",
  "opt-einsum>=3.3.0",
  "scikit-learn>=1.1.0",
  "networkx>=2.8.0",
  "gymnasium>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/sunghunkwag/Autonomous-Self-Organizing-AGI"
Issues = "https://github.com/sunghunkwag/Autonomous-Self-Organizing-AGI/issues"
